fixed collapse nav

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -60,9 +60,7 @@ html, body {
 
 
 .collapsing, .in {
-	border: 2px solid black;
-	margin: 4px;
-	background: rgba(00, 00, 00, .7);
+	border: 1px solid black;
 }
 
 .alert {
@@ -96,7 +94,7 @@ input, select, textarea{
 }
 .navbar {
 	background: #222222;
-	padding: 0 30px 0 100px;
+	padding: 0 30px 0 30px;
 	-webkit-box-shadow: 0px 1px 10px black;
 	-moz-box-shadow: 0px 1px 10px black;
 	box-shadow: 0px 1px 10px black;
